--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <br><br>
         <div style="text-align: center;">
             <h1 class=" display-2 text-success">Merhaba!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo doloribus soluta possimus quos porro eos?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, beatae! Lorem <a href="filmler.html">Filmler</a> ipsum dolor sit amet consectetur adipisicing elit. Quo doloribus soluta possimus quos porro eos?</p>
         </div>
         <hr>
         <div style="text-align: center;">
